  * Install pp-trace, clang-move and clang-offload-wrapper in
    clang-tools-10
  * Revert
    "[clang-tools-extra] [cmake] Link against libclang-cpp whenever
    possible" as it introduces a dep from libclang to libclang-cpp
    Breaking the symbol list (and people should like to libclang-cpp
    if they want to use C++ api)
    https://bugs.llvm.org/show_bug.cgi?id=43589

 -- Sylvestre Ledru <sylvestre@debian.org>  Fri, 04 Oct 2019 15:30:37 +0200

llvm-toolchain-snapshot (1:10~svn372920-1~exp1) experimental; urgency=medium

  * New snapshot release
  * Add two new symbols to libclang1:
    - clang_install_aborting_llvm_fatal_error_handler
    - clang_uninstall_llvm_fatal_error_handler
  * site-packages renamed to dist-packages in python3-lldb-10

 -- Sylvestre Ledru <sylvestre@debian.org>  Sat, 07 Sep 2019 09:07:01 +0200

llvm-toolchain-snapshot (1:10~svn370840-1~exp1) experimental; urgency=medium

  * New snapshot release
  * Update of the license file. Upstream moved to Apache 2
    with LLVM exception (Closes: #935149)
  * Debian moved to gcc-9. This gcc version now refuses -flto="Thin"
    Move from LLVM_ENABLE_LTO="Thin" to BOOTSTRAP_LLVM_ENABLE_LTO="Thin"
    to mitigate the issue (the argument should be passed only at the
    second stage of the build process)
    See https://bugs.llvm.org/show_bug.cgi?id=43193
  * Rename libclang-cpp1-10 to libclang-cpp10 to match the soname and libllvm10
    naming (at some point, all libs should do that ...)
  * New symbols in libomp5:
   - GOMP_loop_nonmonotonic_dynamic_next
   - GOMP_loop_nonmonotonic_dynamic_start
   - GOMP_loop_nonmonotonic_guided_next
   - GOMP_loop_nonmonotonic_guided_start
   - GOMP_loop_ull_nonmonotonic_dynamic_next
   - GOMP_loop_ull_nonmonotonic_dynamic_start
   - GOMP_loop_ull_nonmonotonic_guided_next
   - GOMP_loop_ull_nonmonotonic_guided_start
   - GOMP_parallel_loop_nonmonotonic_dynamic
   - GOMP_parallel_loop_nonmonotonic_guided